# ShowMiiWADs-Py

./: .gitignore  .gitmodules  Build.ps1  Makefile  README.md  ShowMiiWADs-Py.py  requirements.txt
.github/workflows/: build.yml
modules/: config.py  coredata.py  lz77.py
packaging/: ShowMiiWADs-Py.desktop
qt/py/: ui_MainWindow.py
qt/ui/: MainWindow.ui
rust_modules/: Cargo.toml  pyproject.toml
rust_modules/src/: lib.rs
